bug 17599 - wrap the media management formatting prefs in a closable box (r=kreeger)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@14529 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/dialogs/preferences.css
+++ b/app/skin/dialogs/preferences.css
@@ -110,7 +110,12 @@ listheader
 }
 
 
-/* library management tab */
+/* media management tab */
+#manage_media_format_box {
+  margin: 4px;
+  display: -moz-groupbox;
+}
+
 #manage_media_format_dir_formatter > hbox,
 #manage_media_format_file_formatter > hbox {
   min-height: 5em;
