--- a/feathers/gonzo/chrome/skin/preferences/preferences.css
+++ b/feathers/gonzo/chrome/skin/preferences/preferences.css
@@ -91,3 +91,13 @@
 
   font-size:11px !important;
 }
+
+
+/***** Media Management preferences pane *****/
+#manage_media_format_box {
+  margin: 4px;
+  padding: 0 4px;
+  background-color:rgb(255,255,255);
+  border:1px solid rgb(161,161,161);
+  -moz-border-radius:3px;
+}
